Revert option added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 					<a href="" class="button" ng-click="vote(opt)">{{opt.name}}</a>
 				</span>
 				<a href="" class="button" ng-click="addBlanco()">Blanco</a>
+				<a href="" class="button" ng-click="revert()">Herstel</a>
 			</div>
 			
 			<div id="options">
